fix:
- rename event box